# at-bus-infrastructure

./: .gitignore  .gitmodules  .terraform.lock.hcl  Makefile  README.md  backend.tf  main.tf  outputs.tf  providers.tf  pyproject.toml  setup-gcp-ssh.sh  variables.tf
.github/workflows/: deploy-airflow-files.yml  deploy-airflow.yml  deploy-infrastructure.yml  docker_pull_at_bus_load.yml  docker_pull_in_airflow_server.yml
airflow/: docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: cloud_storage_dag_UI_conn.py  cloud_storage_dag_secret_manager_conn.py  dag_at_bus_load.py  dag_at_bus_load_transform.py  dag_postgres_task.py  dag_with_python.py  my_dag.py  test_gcp_conn.py
ansible/: Makefile  README.md  ansible.cfg  deploy.sh  run-playbook.sh
ansible/inventory/: production.yml
ansible/inventory/group_vars/: airflow_servers.yml  all.yml
ansible/playbooks/deploy/: airflow.yml
ansible/playbooks/operations/: README-docker-pull.md  docker-pull.yml  restart-airflow.yml  status-airflow.yml  stop-airflow.yml
ansible/roles/airflow/files/: airflow.cfg
ansible/roles/airflow/handlers/: main.yml
ansible/roles/airflow/tasks/: main.yml
ansible/templates/: environment.j2
ansible/vars/: main.yml
docs/: GITHUB_SETUP.md
modules/artifact_registry/: main.tf  variables.tf
modules/bigquery/: main.tf  variables.tf
modules/compute/: main.tf  outputs.tf  variables.tf
modules/firewall_rules/: main.tf
modules/iam/: main.tf  outputs.tf  variables.tf
modules/project_services/: main.tf
modules/storage/: main.tf  variables.tf
(+18 files in other folders)
